<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/form_validation"
       android:gravity="center"
       android:textSize="20sp"
       android:textStyle="bold"
       android:textColor="@color/purple_700"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/Item"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rate"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_700"
        android:layout_margin="5dp"
        android:text="@string/submit"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/Discount"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_700"
        android:text="@string/submit"
        android:textColor="#000000"
        android:layout_margin="5dp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DisValue"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/discountValue"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/NetTotal"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/netTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/GST"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/gst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_700"
        android:text="@string/submit"
        android:textColor="#000000"
        android:layout_margin="10dp"
        tools:ignore="TextContrastCheck,TextContrastCheck" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/name"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/GstValue"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/gstValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:text="@string/GrandTotal"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/grandTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"/>

    </LinearLayout>



</LinearLayout>